post schema added
